fixing the map overlap

--- a/Final_Project/final_project.css
+++ b/Final_Project/final_project.css
@@ -144,6 +144,7 @@ footer {
 
 /* Sticky navigation bar */
 .navbar {
+    z-index: 1000;
     width: 100%;
     display: flex;
     justify-content: space-between;
